--- a/租赁网站/css/index.css
+++ b/租赁网站/css/index.css
@@ -1,3 +1,110 @@
-.main-wrapper {
-  margin: 0 100px;
+ul,
+ol {
+  padding: 0;
+}
+
+.slider {
+  position: relative;
+  overflow: auto;
+  text-align: center;
+}
+
+.slider li {
+  list-style: none;
+}
+
+.slider ul li {
+  float: left;
+}
+
+#slider1 {
+  width: 100%;
+}
+
+#slider1 .dots {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 20px;
+}
+
+#slider1 .dots li {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 4px;
+  text-indent: -999em;
+  border: 2px solid #fff;
+  border-radius: 6px;
+  cursor: pointer;
+  opacity: .4;
+  -webkit-transition: background .5s, opacity .5s;
+  -moz-transition: background .5s, opacity .5s;
+  transition: background .5s, opacity .5s;
+}
+
+#slider1 .dots li.active {
+  background: #fff;
+  opacity: 1;
+}
+
+#slider1 .arrow {
+  position: absolute;
+  top: 50%;
+  font-size: 100px;
+  transform: translateY(-50%);
+}
+
+#slider1 #al {
+  left: 15px;
+}
+
+#slider1 #ar {
+  right: 15px;
+}
+
+#slider2 {
+  width: 100%;
+}
+
+#slider2 .dots {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 20px;
+}
+
+#slider2 .dots li {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 4px;
+  text-indent: -999em;
+  border: 2px solid #fff;
+  border-radius: 6px;
+  cursor: pointer;
+  opacity: .4;
+  -webkit-transition: background .5s, opacity .5s;
+  -moz-transition: background .5s, opacity .5s;
+  transition: background .5s, opacity .5s;
+}
+
+#slider2 .dots li.active {
+  background: #fff;
+  opacity: 1;
+}
+
+#slider2 .arrow {
+  position: absolute;
+  top: 50%;
+  font-size: 100px;
+  transform: translateY(-50%);
+}
+
+#slider2 #al {
+  left: 15px;
+}
+
+#slider2 #ar {
+  right: 15px;
 }
