--- a/租赁网站/css/common.css
+++ b/租赁网站/css/common.css
@@ -13,8 +13,9 @@ footer {
 .wrapper {
   position: relative;
   min-height: 100%;
-  padding-bottom: 80px;
+  padding:0;
   box-sizing: border-box;
+  margin: 0;
 }
 .main-wrapper{
   width: 100%;
