--- a/租赁网站/css/index.css
+++ b/租赁网站/css/index.css
@@ -108,3 +108,42 @@ ol {
 #slider2 #ar {
   right: 15px;
 }
+
+#slider3 {
+  width: 100%;
+}
+
+#slider3 .dots {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 20px;
+}
+
+#slider3 .dots li {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 4px;
+  text-indent: -999em;
+  border: 2px solid #fff;
+  border-radius: 6px;
+  cursor: pointer;
+  opacity: .4;
+  -webkit-transition: background .5s, opacity .5s;
+  -moz-transition: background .5s, opacity .5s;
+  transition: background .5s, opacity .5s;
+}
+
+#slider3 .dots li.active {
+  background: #fff;
+  opacity: 1;
+}
+
+#slider3 #al {
+  left: 15px;
+}
+
+#slider3 #ar {
+  right: 15px;
+}
