--- a/租赁网站/css/common.css
+++ b/租赁网站/css/common.css
@@ -3,20 +3,13 @@ body {
 }
 
 footer {
-  position: absolutes;
-  bottom: 0;
-  left: 0;
-  right: 0;
   height: 80px;
 }
 
 .wrapper {
-  position: relative;
   min-height: 100%;
-  padding:0;
-  box-sizing: border-box;
-  margin: 0;
+  margin-bottom: -80px;
 }
 .main-wrapper{
-  width: 100%;
+  padding-bottom: 150px;
 }
